@@ -1,31 +1,35 @@
-
+DROP TABLE IF EXISTS `mobs`;
 CREATE TABLE IF NOT EXISTS `mobs` (
-  `Name` text NOT NULL,
-  `aRan` text NOT NULL,
-  `LV` text NOT NULL,
-  `HP` tinyint(6) unsigned NOT NULL default '0',
+  `ID` int(11) unsigned NOT NULL default '0',
+  `Sprite_Name` text NOT NULL,
+  `K_Name` text NOT NULL,
+  `I_Name` text NOT NULL,
+  `LV` int(11) unsigned NOT NULL default '0',
+  `HP` int(11) unsigned NOT NULL default '0',
   `SP` int(9) unsigned NOT NULL default '0',
+  `exp` int(11) unsigned NOT NULL default '0',
+  `jexp` int(11) unsigned NOT NULL default '0',
+  `def` tinyint(4) unsigned NOT NULL default '0',
+  `mdef` smallint(6) unsigned NOT NULL default '0',  
   `str` mediumint(9) unsigned NOT NULL default '0',
   `int` mediumint(9) unsigned NOT NULL default '0',
   `vit` mediumint(9) unsigned NOT NULL default '0',
   `dex` tinyint(4) unsigned NOT NULL default '0',
   `agi` smallint(6) unsigned NOT NULL default '0',
   `luk` smallint(6) unsigned NOT NULL default '0',
-  `attack_rating_min` smallint(6) unsigned NOT NULL default '0',
-  `attack_rating_max` smallint(6) unsigned NOT NULL default '0',
-  `def` tinyint(4) unsigned NOT NULL default '0',
-  `exp` tinyint(4) unsigned NOT NULL default '0',
-  `jexp` tinyint(4) unsigned NOT NULL default '0',
-  `as` tinyint(4) unsigned NOT NULL default '0',
-  `es` tinyint(4) unsigned NOT NULL default '0',
-  `mspeed` tinyint(4) unsigned NOT NULL default '0',
-  `attackedmt` tinyint(4) unsigned NOT NULL default '0',
-  `attackmt` tinyint(4) unsigned NOT NULL default '0',
+  `range` tinyint(4) unsigned NOT NULL default '0',
+  `range2` tinyint(4) unsigned NOT NULL default '0',
+  `range3` tinyint(4) unsigned NOT NULL default '0',
+  `attack_rating_min` int(11) unsigned NOT NULL default '0',
+  `attack_rating_max` int(11) unsigned NOT NULL default '0',
+  `attackspeed` int(11) unsigned NOT NULL default '0',
+  `delay_motion` int(11) unsigned NOT NULL default '0',
+  `attackdelay` int(11) unsigned NOT NULL default '0',
+  `walkspeed` int(11) unsigned NOT NULL default '0',
   `property` tinyint(4) unsigned NOT NULL default '0',
   `scale` tinyint(4) unsigned NOT NULL default '0',
-  `class` tinyint(4) unsigned NOT NULL default '0',
+  `mode` mediumint(6) unsigned NOT NULL default '0',
   `race` smallint(6) unsigned NOT NULL default '0',
-  `mdef` smallint(6) unsigned NOT NULL default '0',
   `taming_item` smallint(6) unsigned NOT NULL default '0',
   `food_item` smallint(6) unsigned NOT NULL default '0'
 ) TYPE=MyISAM;
